[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://assets/hand_fire.png" type="Texture" id=3]
[ext_resource path="res://assets/sfx/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/shoot.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/dead.png" type="Texture" id=6]
[ext_resource path="res://assets/sfx/dead.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.15121, 24.1725 )

[sub_resource type="Animation" id=2]
resource_name = "dead"
length = 3.6
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteDead:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 3, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "duck"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fire"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteFire:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=7]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 16
frame = 2

[node name="SpriteFire" type="Sprite" parent="."]
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 3 )
offset = Vector2( -8, 9 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 2 )
anims/duck = SubResource( 3 )
anims/fire = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="BulletPosition" type="Position2D" parent="."]
position = Vector2( -13, 10 )

[node name="SoundNode" type="Node2D" parent="."]

[node name="JumpSound" type="AudioStreamPlayer" parent="SoundNode"]
stream = ExtResource( 4 )

[node name="ShootSound" type="AudioStreamPlayer" parent="SoundNode"]
stream = ExtResource( 5 )

[node name="DeadSound" type="AudioStreamPlayer" parent="SoundNode"]
stream = ExtResource( 7 )

[node name="SpriteDead" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
hframes = 6
frame = 5
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="SoundNode/DeadSound" to="." method="_on_DeadSound_finished"]
